--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "gatsby-cli": "^5.10.0",
     "gatsby-plugin-image": "^3.9.0",
     "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-sass": "^6.10.0",
     "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-plugin-postcss": "^6.10.0",
     "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-sharp": "^5.9.0",
     "react": "^18.2.0",
@@ -17,11 +19,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "gatsby-plugin-postcss": "^6.10.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "tailwindcss": "^3.3.2"
   },
   "keywords": [
     "gatsby"
